[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-untangler"
version = "0.1.0"
description = "A module for untangling interleaved signal patterns"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/yourusername/signal-untangler"
"Bug Tracker" = "https://github.com/yourusername/signal-untangler/issues"
