[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_untangler"
version = "0.1.0"
description = "A tool to detect interweaving patterns in signals"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.7"

[project.scripts]
signal-untangler = "main:main"

[project.gui-scripts]
signal-untangler-gui = "interweaving_gui.app:launch_gui"
